v7 fix for amrvlvr

--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -429,6 +429,9 @@
                     align-items: center;
                     justify-content: center;
                 }
+                .fr-view img.fr-dib.fr-fir { 
+                    margin-right: auto;
+                }
             });
             ul.nav-sub-menu{
                 li{
