Enhancement > SSB > 'Drop Image or video' text should get aligned in middle on upload media section, if user tries to upload any media through frola tool bar #10442

--- a/public/less/ssb-site-builder/ssb-froala.less
+++ b/public/less/ssb-site-builder/ssb-froala.less
@@ -931,6 +931,7 @@ body[ng-controller] .fr-image-resizer .fr-handler.fr-hse {
 body[ng-controller] .fr-image-upload-layer, body[ng-controller] .fr-video-upload-layer {
   border: dashed 2px #ffffff;
   background: #1c2b36;
+  min-height: 175px!important;
 }
 body[ng-controller] .fr-image-upload-media-layer, body[ng-controller] .fr-video-upload-media-layer {
     border: dashed 2px #ffffff;
