SSB > Button size does not get updated on text element in video component, in case user insert any button on text element and then increase the button title size #10426

--- a/public/less/frontend/components/video-v1.less
+++ b/public/less/frontend/components/video-v1.less
@@ -44,7 +44,7 @@
       }
 
 
-      .btn {
+      .btn:not(.ssb-theme-btn) {
         width: 200px;
         height: 50px;
         margin-top: 30px;
