SSB > Specific 'simple landing' page does not appear in page drop down menu on form builder component settings, if user tries to select the page in 'redirect' option #10391

--- a/public/less/ssb-site-builder/ssb-sections.less
+++ b/public/less/ssb-site-builder/ssb-sections.less
@@ -252,6 +252,12 @@
     }
 }
 
+.redirect-to-page-select{
+    .ui-select-choices{
+        max-height: 135px !important;
+    }
+}
+
 @import "ssb-sections/ssb-header.less";
 @import "ssb-sections/ssb-hero.less";
 @import "ssb-sections/ssb-nav-hero.less";
