--- a/public/less/ssb-site-builder/ssb-sections/ssb-vertical-nav.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-vertical-nav.less
@@ -39,11 +39,17 @@
     .ssb-wrap-fixed-right-nav{
         margin-left:250px;
     }
-    .ssb-wrap-left-fixed-left-nav .v-dispaly-auto-align {
-      color: #939597;
-    }
-    .ssb-wrap-left-fixed-left-nav .navbar .nav li a {
+    .ssb-wrap-left-fixed-left-nav {
+     .v-dispaly-auto-align {
+             color: #939597;
+         }
+     .navbar .nav li a {
       display: inline-block;
+      }
+      ul.nav-sub-menu{
+             position: relative ;
+       }
     }
+
 
 }
