#10405 dot issue for always mobile and wide mobile

--- a/public/less/frontend/components/navbar-custom.less
+++ b/public/less/frontend/components/navbar-custom.less
@@ -28,6 +28,15 @@
             }
             [testimonials-component]{
                 position: absolute;
+                width:100%;
+                ul.slick-dots{
+                    display: block !important;
+                    position: absolute;
+                    left: 0px;
+                    top: 0px;
+                    height: 20px;
+                    z-index: 999999;
+                }
             }
         }
         .ssb-section-section [navigation-component].ssb-component-amm {
@@ -122,8 +131,17 @@
                 width: 100%;
                 height: 100%;
             }
-            [testimonials-component]{
+            [testimonials-component]{ 
                 position: absolute;
+                width:100%;
+                ul.slick-dots{
+                    display: block !important;
+                    position: absolute;
+                    left: 0px;
+                    top: 0px;
+                    height: 20px;
+                    z-index: 999999;
+                }
             }
         }
         .ssb-section-section [navigation-component].ssb-component-wmm {
