--- a/public/admin/assets/views/partials/settings.html
+++ b/public/admin/assets/views/partials/settings.html
@@ -299,7 +299,20 @@
                                     <i class="fa fa-eyedropper" />
                                 </div>
                                 <label>Blog template background color</label>
-                                    <span tooltip-placement="top" tooltip="Set background color  of blog template"><i class="fa fa-info-circle" /></span>
+                                    <span tooltip-placement="top" tooltip="Set background color of blog template"><i class="fa fa-info-circle" /></span>
+                            </div>
+                        <div class="clearfix"></div>
+                    </form>
+                    <div class="clearfix"></div>
+                    <form class="col-sm-6 form-horizontal">
+
+                            <div class="form-group ssb-spectrum-color-picker-small">
+                                <div class="ssb-spectrum-color-picker-background-container">
+                                    <spectrum-colorpicker class="ssb-spectrum-color-picker-background" format="'rgb'" options="spectrum.options" ng-model="website.settings.blogTagHeadingColor"></spectrum-colorpicker>
+                                    <i class="fa fa-eyedropper" />
+                                </div>
+                                <label>Blog template 'Tag' heading text color</label>
+                                    <span tooltip-placement="top" tooltip="Set text color of blog template 'Tag' heading"><i class="fa fa-info-circle" /></span>
                             </div>
                         <div class="clearfix"></div>
                     </form>
