--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -168,8 +168,12 @@ if (typeof account.website.theme !== 'undefined' && typeof account.website.theme
         .ssb-theme-btn.btnLaunchCart:hover, .ssb-theme-btn.btnLaunchCart:active, .ssb-theme-btn.btnLaunchCart:focus {
             background-color: #{account.website.themeOverrides.styles.checkoutBtnBgColor}!important;
         }
-        .ssb-page-blog-list   .ssb-page-layout-row-2-col>div.col-xs-12 .ssb-section-layout, .ssb-page-blog-list .ssb-page-layout-row-2-col>div.col-xs-12{
+        .ssb-page-blog-list .ssb-page-layout-row-2-col>div.col-xs-12 .ssb-section-layout, .ssb-page-blog-list .ssb-page-layout-row-2-col>div.col-xs-12{
              background-color: #{account.website.settings.defaultBlogTemplateBgColor};
+        }
+
+        .ssb-blog-post-list.ssb-media-stacked article .ssb-blog-post-body .ssb-tag-heading{
+            color : #{account.website.settings.blogTagHeadingColor};
         }
 
         @media screen and (min-width: 768px) {
