#10013 icon next line issue

--- a/public/less/frontend/components/text-only-v1.less
+++ b/public/less/frontend/components/text-only-v1.less
@@ -28,7 +28,11 @@
 } 
 @media (min-width: 720px) {
     .fr-view span.fr-emoticon,.fr-view span.fr-emoticon>span.ssb-bg-color-inline-block{
-        display: table-cell;
+        ///display: table-cell;
         font-family: unset;
+  }
+  .fr-view span.fr-emoticon{
+    display: inline-flex;
+    line-height: 1;
   }
 }
