--- a/public/admin/assets/js/indi-email-builder/email-controls/email-sidebar/email-sidebar.component.html
+++ b/public/admin/assets/js/indi-email-builder/email-controls/email-sidebar/email-sidebar.component.html
@@ -173,36 +173,36 @@
                     <li ng-repeat="section in vm.state.email.components track by $index" class="ssb-page-section-settings-item" ng-class="{'ssb-sidebar-move-handle': !vm.uiState.isBlogPage}">
                         <div ng-hide="vm.uiState.isBlogPage" class="ssb-sidebar-item-icon ti-move display-ib"></div>
                         <div
-                            ng-hide="vm.uiState.componentTypes[vm.uiState.activeSectionIndex].isEdit "
+                            ng-hide="vm.uiState.componentTypes[vm.uiState.activeComponentIndex].isEdit "
                             class="ssb-sidebar-item-icon ssb-sidebar-item-icon-offset-1 ti-close display-ib"
-                            ng-if="vm.uiState.activeSectionIndex === $index" ng-click="vm.removeSectionFromPage(vm.uiState.activeSectionIndex)"
+                            ng-if="vm.uiState.activeComponentIndex === $index" ng-click="vm.removeComponentFromSection(vm.uiState.activeComponentIndex)"
                             tooltip-placement="left"
                             tooltip="Remove section">
                         </div>
                         <div
-                            ng-hide="vm.uiState.componentTypes[vm.uiState.activeSectionIndex].isEdit"
+                            ng-hide="vm.uiState.componentTypes[vm.uiState.activeComponentIndex].isEdit"
                             class="ssb-sidebar-item-icon ssb-sidebar-item-icon-offset-2 ti-pencil display-ib"
-                            ng-if="vm.uiState.activeSectionIndex === $index"
-                            ng-click="vm.uiState.accordion.sections[vm.uiState.activeSectionIndex].isEdit = true; vm.editSectionName('editable_{{section._id}}')"
+                            ng-if="vm.uiState.activeComponentIndex === $index"
+                            ng-click="vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit = true; vm.editSectionName('editable_{{section._id}}')"
                             tooltip-placement="left"
                             tooltip="Rename section">
                         </div>
                         <div
-                            ng-hide="vm.uiState.componentTypes[vm.uiState.activeSectionIndex].isEdit"
+                            ng-hide="vm.uiState.componentTypes[vm.uiState.activeComponentIndex].isEdit"
                             class="ssb-sidebar-item-icon ssb-sidebar-item-icon-offset-3 display-ib ti-eye"
-                            ng-if="vm.uiState.activeSectionIndex === $index"
-                            ng-click="vm.hideSectionFromPage(section, vm.uiState.activeSectionIndex)"
+                            ng-if="vm.uiState.activeComponentIndex === $index"
+                            ng-click="vm.hideSectionFromPage(section, vm.uiState.activeComponentIndex)"
                             tooltip-placement="left"
                             tooltip="Show/hide section">
                         </div>
 
                         <div class="accordion panel-group">
-                            <div class="ssb-sidebar-sortable-item panel panel-default" ng-click="vm.setActiveSection($index)" ng-class="{ 'ssb-sidebar-section-open': vm.uiState.activeSectionIndex === $index }">
+                            <div class="ssb-sidebar-sortable-item panel panel-default" ng-click="vm.setActive($index)" ng-class="{ 'ssb-sidebar-section-open': vm.uiState.activeComponentIndex === $index }">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
                                         <a href="javascript:void(0)" class="accordion-toggle">
-                                        <span ng-class="{ 'hidden-faded': !vm.showSection(section) }" ng-if="!vm.uiState.accordion.sections[vm.uiState.activeSectionIndex].isEdit">{{ vm.getSectionTitle(section.type) }}</span>
-                                        <span onhide="vm.uiState.accordion.sections[vm.uiState.activeSectionIndex].isEdit=false" id="editable_{{section._id}}" ng-if="vm.uiState.accordion.sections[vm.uiState.activeSectionIndex].isEdit" editable-text="section.type">{{ vm.getSectionTitle(section.type) }}</span>
+                                        <span ng-class="{ 'hidden-faded': !vm.showSection(section) }" ng-if="!vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit">{{ vm.getSectionTitle(section.type) }}</span>
+                                        <span onhide="vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit=false" id="editable_{{section._id}}" ng-if="vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit" editable-text="section.type">{{ vm.getSectionTitle(section.type) }}</span>
                                         </a>
                                     </h4>
                                 </div>
