--- a/public/admin/assets/views/customer-detail.html
+++ b/public/admin/assets/views/customer-detail.html
@@ -81,7 +81,7 @@
                                                         </div>
                                                     </td>
                                                 </tr>
-                                                
+
                                                 <tr>
                                                     <td>Custom Domain:</td>
                                                     <td>
@@ -146,7 +146,7 @@
                                                         </div>
                                                     </td>
                                                 </tr>
-                                                
+
                                             </tbody>
                                         </table>
                                         <table class="table table-condensed">
@@ -173,7 +173,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Enable Custom Css:</td>
+                                                    <td>Enable Custom CSS:</td>
                                                     <td>
                                                         <div ng-show="customer">
                                                             <switch ng-model="customer.showhide.customCss" ng-change="updateCustomCssEnabled(customer.showhide.customCss)" class="pull-right margin-bottom-10"></switch>
@@ -266,7 +266,7 @@
                                                             <a ng-click="removeUserFromAccount(user._id)" class="delete-row"><i class="fa fa-trash-o"></i></a>
                                                         </td>
                                                     </tr>
-                                                    
+
                                                     </tbody>
                                                     <tfoot>
                                                     <tr>
@@ -389,7 +389,7 @@
                                     <div class="form-group center">
                                         <div class="customer-template-image-container">
                                             <div class="customer-template-image thumbnail margin-bottom-5">
-                                                
+
                                                    <img ng-src="{{ customer.templateImageUrl }}" err-src="/admin/assets/images/default-page.jpg">
                                             </div>
                                             <div class="template-image-buttons-edit">
