--- a/public/admin/assets/var/techevent/views/partials/settings.html
+++ b/public/admin/assets/var/techevent/views/partials/settings.html
@@ -27,7 +27,7 @@
                                 <a class="text-dark" ng-click="viewSettings('website', 'Scripts')">Scripts</a>
                             </li>
                             <li ng-if='account.showhide.customCss'>
-                                <a class="text-dark" ng-click="viewSettings('website', 'Custom Css')">Custom Css</a>
+                                <a class="text-dark" ng-click="viewSettings('website', 'Custom CSS')">Custom CSS</a>
                             </li>
                         </ul>
                     </div>
@@ -280,7 +280,7 @@
                         <div class="form-group">
                             <label>Blog template max width</label>
                             <span tooltip-placement="bottom" tooltip="Set max width of blog template"><i class="fa fa-info-circle" /></span>
-                            
+
                             <select ng-model="website.settings.defaultBlogTemplateWidth" class="form-control" ng-options="option.value as option.label for option in blogListResolutionOptions">
                             <option value="">--Select--</option>
                             </select>
@@ -290,7 +290,7 @@
                     </form>
                     <div class="clearfix"></div>
                     <form class="col-sm-6 form-horizontal">
-                            
+
                             <div class="form-group ssb-spectrum-color-picker-small">
                                 <div class="ssb-spectrum-color-picker-background-container">
                                     <spectrum-colorpicker class="ssb-spectrum-color-picker-background" format="'rgb'" options="spectrum.options" ng-model="website.settings.defaultBlogTemplateBgColor"></spectrum-colorpicker>
@@ -319,16 +319,16 @@
                       </form>
                       <div class="clearfix"></div>
                 </tab>
-                <tab heading="Custom Css" ng-if='account.showhide.customCss'>
+                <tab heading="Custom CSS" ng-if='account.showhide.customCss'>
                       <form class="col-sm-6 form-horizontal">
                           <div class="form-group">
-                              <label>Enable Custom Css</label>
-                              <span tooltip-placement="bottom" tooltip="Enable custom css to your website"><i class="fa fa-info-circle" /></span>
+                              <label>Enable Custom CSS</label>
+                              <span tooltip-placement="bottom" tooltip="Enable custom CSS in your website"><i class="fa fa-info-circle" /></span>
                               <switch ng-model="website.resources.toggles.customCss" class="pull-right"></switch>
                           </div>
                           <div class='form-group' ng-if='website.resources.toggles.customCss'>
                             <label>Global Css</label>
-                            <span tooltip-placement="bottom" tooltip="Add custom css snippets for your website globally"><i class="fa fa-info-circle" /></span>
+                            <span tooltip-placement="bottom" tooltip="Add custom CSS snippets for your website globally"><i class="fa fa-info-circle" /></span>
                             <textarea class='form-control' ng-model='website.resources.customCss.global.original'></textarea>
                           </div>
                           <div class="clearfix"></div>
