--- a/templates/snippets/index_body_scripts.jade
+++ b/templates/snippets/index_body_scripts.jade
@@ -183,7 +183,6 @@ script(src="scripts/controllers/notFoundCtrl.js")
 script(src="scripts/directives/angularparallax.js")
 script(src="scripts/directives/last.js")
 script(src="scripts/directives/carousel.js")
-script(src="scripts/directives/userScripts.js")
 script(src="scripts/directives/externalScripts.js")
 script(src="scripts/directives/customFonts.js")
 script(src="scripts/directives/indi-accordion.js")
@@ -198,8 +197,8 @@ script.
     var firstScriptTag = document.getElementsByTagName('script')[0];
     firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
-| !{website.resources.userScripts.global.sanitized}
+| !{userScripts}
+
 
 external-scripts(class="external-scripts")
 custom-fonts(class="custom-fonts")
-user-scripts(class="user-scripts" handle="#{currentPageHandle}")
