--- a/templates/snippets/index_body_scripts_minimized.jade
+++ b/templates/snippets/index_body_scripts_minimized.jade
@@ -14,7 +14,7 @@ script.
     var firstScriptTag = document.getElementsByTagName('script')[0];
     firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
-| !{website.resources.userScripts.global.sanitized}
+| !{userScripts}
 
 // - Google Analytics
 script.
@@ -35,4 +35,3 @@ script(src="https://cdn.trackjs.com/releases/current/tracker.js")
 
 external-scripts(class="external-scripts")
 custom-fonts(class="custom-fonts")
-user-scripts(class="user-scripts" handle="#{currentPageHandle}")
