--- a/public/components/email-component-wrap.html
+++ b/public/components/email-component-wrap.html
@@ -6,7 +6,7 @@
             class="component-wrap"
             ng-if="component.visibility"
             ng-class="{'editing': isEditing}"
-            data-ng-include data-src="'/components/'+component.type_custom+'_v'+component.version+'.html'">
+            data-ng-include data-src="'/components/'+component.type+'_v'+component.version+'.html'">
         </td>
     </tr>
 </table>
