--- a/templates/snippets/index_body_scripts_minimized.jade
+++ b/templates/snippets/index_body_scripts_minimized.jade
@@ -15,6 +15,8 @@ script.
     firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
 | !{userScripts}
+| !{externalScripts}
+
 
 // - Google Analytics
 script.
@@ -32,5 +34,3 @@ script(type="text/javascript").
 
 script(src="https://cdn.trackjs.com/releases/current/tracker.js")
 // - End TrackJS
-
-external-scripts(class="external-scripts")
