--- a/public/admin/assets/js/indi-email-builder/email-controls/email-sidebar/email-sidebar.component.html
+++ b/public/admin/assets/js/indi-email-builder/email-controls/email-sidebar/email-sidebar.component.html
@@ -201,8 +201,8 @@
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
                                         <a href="javascript:void(0)" class="accordion-toggle">
-                                        <span ng-class="{ 'hidden-faded': !vm.showSection(section) }" ng-if="!vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit">{{ vm.getSectionTitle(section.type) }}</span>
-                                        <span onhide="vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit=false" id="editable_{{section._id}}" ng-if="vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit" editable-text="section.type">{{ vm.getSectionTitle(section.type) }}</span>
+                                        <span ng-class="{ 'hidden-faded': !vm.showSection(section) }" ng-if="!vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit">{{ vm.getSectionTitle(section.display_name || section.type) }}</span>
+                                        <span onhide="vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit=false" id="editable_{{section._id}}" ng-if="vm.uiState.accordion.sections[vm.uiState.activeComponentIndex].isEdit" editable-text="section.display_name">{{ vm.getSectionTitle(section.display_name || section.type) }}</span>
                                         </a>
                                     </h4>
                                 </div>
