#10465 nav issue fix

--- a/public/less/ssb-site-builder/ssb-sidebar.less
+++ b/public/less/ssb-site-builder/ssb-sidebar.less
@@ -45,7 +45,13 @@
           }
         }
     }
-
+    #reorderNavBarContainer {
+        .setting-nav-sub-menu {
+            .panel-heading .panel-title a{
+                  padding-right: 34% !important;
+            }
+        }
+    }
     @media (min-width: 768px) {
         display: block;
         height: 200px;
