front end - removed sectionInitDelayDone while loading background images with parallax

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section.component.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="px-ele-{{vm.section._id}}"
-        ng-if="vm.sectionInitDelayDone && vm.section.bg.img && vm.section.bg.img.url && vm.section.bg.img.show && vm.section.bg.img.parallax"
+        ng-if="vm.section.bg.img && vm.section.bg.img.url && vm.section.bg.img.show && vm.section.bg.img.parallax"
         {{vm.section.bg.img.parallax ? parallax-background : ""}}
         class="bg {{vm.sectionBGClass(vm.section)}} opacity-0"
         ng-attr-parallax-ratio="{{vm.section.bg.img.parallax ? '0.4' : '1'}}"
