--- a/public/components/email-header_v1.html
+++ b/public/components/email-header_v1.html
@@ -10,7 +10,7 @@
                                 <table class="device-width" align="center" width="640" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                                     <tr>
                                         <td class="wrapper" width="100%" style="padding-left: 20px; padding-right: 20px; padding-top: 45px;">
-                                            <div style="background-color: {{component.bg.color || '#ffffff'}};">
+                                            <div>
                                                 <table class="device-width" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                                                     <tr>
                                                         <td class="device-width" width="100%" style="padding-top: 30px;">
