Front end - moved section style, classes and bg class styles to node js

--- a/templates/snippets/index_body_scripts.jade
+++ b/templates/snippets/index_body_scripts.jade
@@ -96,6 +96,10 @@ script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-location-find
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-location-finder/ssb-location-finder.controller.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section.component.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section.controller.js")
+
+script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.js")
+script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.controller.js")
+
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-text-settings/ssb-text-settings.component.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-text-settings/ssb-text-settings.controller.js")
 
